--- a/src/views/Dashboard/dashboard.module.css
+++ b/src/views/Dashboard/dashboard.module.css
@@ -1,6 +1,60 @@
+.outerDiv {
+    width: 90%;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    flex-direction: column;
+}
+
+.line {
+    width: 90%;
+    /* color: #C3C5CB;
+    background-color: #c3c5cb; */
+}
+
+.textalign {
+    text-align: center;
+}
+
+.text {
+    color: #00E8A2;
+}
+
+.card1 {
+
+    box-sizing: border-box;
+     
+    width: 90%;
+    height: 291px;
+    background: rgba(35, 40, 75, 0.75);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+    color: white;
+    margin-top: 1%;
+    /* margin-left: 10%; */
+}
+
+
+.headingCard1 {
+    text-align: center;
+    margin-top: 0.5%;
+    font-size: 20px;
+}
+
+.card11 {
+    width: 40%;
+    margin-left: 5%;
+}
+
+.card12 {
+    width: 20%;
+    margin-right: 5%;
+    margin-left: 40%;
+}
+
 .card {
     box-sizing: border-box;
-    position: absolute;
+     
     width: 382px;
     height: 336px;
     background: rgba(35, 40, 75, 0.75);
@@ -8,4 +62,14 @@
     backdrop-filter: blur(5px);
     border-radius: 10px;
     color: white;
+}
+
+.card2 {
+    box-sizing: border-box;
+     
+    width: 90%;
+    height: 300px;
+    color: white;
+    margin-top: 1%;
+    /* margin-left: 10%; */
 }
