--- a/src/views/Dashboard/dashboard.module.css
+++ b/src/views/Dashboard/dashboard.module.css
@@ -206,13 +206,22 @@
 }
 
 .card3 {
-    /* box-sizing: border-box;
+    margin-top: 20px;
+}
+
+.btnDiv {
+    margin-top: 45px;
+    margin-left: 346px;
+}
+
+.card4 {
+    box-sizing: border-box;
     width: 90%;
-    height: 361px;
+    height: 200px;
     background: rgba(35, 40, 75, 0.75);
     border: 1px solid #728CDF;
     backdrop-filter: blur(5px);
     border-radius: 10px;
-    color: white; */
+    color: white;
     margin-top: 20px;
 }
